--- a/css/p3.css
+++ b/css/p3.css
@@ -509,8 +509,28 @@ header{
 .carte{
     overflow: hidden;
     white-space: nowrap;
-  }
-.check1{
+}
+.text{
+    white-space: nowrap;
+    overflow: hidden;
+}
+  .nom-cartes{
+    font-family: 'Roboto';
+    font-size: 13px;
+    padding-left: 12px;
+    margin-bottom: 0;
+}
+.text-cartes{
+    font-family: 'Roboto';
+    font-size: 11px;
+    font-weight: 100;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    margin-top: 12px;
+    margin-bottom: 0px;
+}
+  .check1{
     display: flex;
 }    
 .valide{
@@ -542,22 +562,7 @@ header{
 
 }
 
-.nom-cartes{
-    font-family: 'Roboto';
-    font-size: 13px;
-    padding-left: 12px;
-    margin-bottom: 0;
-}
-.text-cartes{
-    font-family: 'Roboto';
-    font-size: 11px;
-    font-weight: 100;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    margin-top: 12px;
-    margin-bottom: 0px;
-}
+
 .prix{
     display: flex;
     align-items: flex-end;
