--- a/css/p3.css
+++ b/css/p3.css
@@ -523,13 +523,11 @@ header{
 }
 .text-cartes{
     font-family: 'Roboto';
-    font-size: 11px;
-    font-weight: 100;
+    font-size: 16px;
+    font-weight: 300;
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap;
-    margin-top: 12px;
-    margin-bottom: 0px;
+    margin: 12px 0px 2px 12px;
 }
   .check1{
     display: flex;
