--- a/css/p3.css
+++ b/css/p3.css
@@ -286,7 +286,7 @@ p{
 .nouveaux{
     position: absolute;
     z-index: 16;
-    top: 61%;
+    top: 56%;
     color: #008766;
     background-color: #99e2d0;
     width: 79px;
@@ -300,7 +300,7 @@ p{
 .nouveau{
     position: absolute;
     z-index: 16;
-    top: 76%;
+    top: 72%;
     color: #008766;
     background-color: #99e2d0;
     width: 79px;
@@ -673,9 +673,9 @@ header{
     left: 71%;
 }
 .nouveau{
-    position: relative;
-    left: 70%;
-    top:-172px;
+    position: absolute;
+    left: 42%;
+    top:155%;
 }
 .texte{
   
@@ -780,7 +780,6 @@ header{
 .titre-pied{
     display: flex;
     justify-content: center;
-    font
 }
 .mentions{
     display: flex;
