--- a/css/p3.css
+++ b/css/p3.css
@@ -101,9 +101,8 @@ header{
     width: 169px;
     height: 32px;
 }
-
-#search{
-    display: flex;
+.search{
+    height: 50px;
 }
 .rechercher{
     width: 100%;
@@ -119,12 +118,13 @@ header{
 	color:black;
 	opacity: 1;
 	text-align: center;
+    font-size: 20px;
   }
 .map{
-    position: absolute;
-    padding: 16px 0px 0px 104px;
-  }
-
+    position: relative;
+    right: -31%;
+    top: -33px;
+}
   /* cadre 1*/
 #cadre1{
       background-color: #f6f6f6;
@@ -664,9 +664,6 @@ header{
 }
 ::placeholder{
     font-size: 20px;
-}
-.map{
-    padding: 19px 0px 0px 45%;
 }
 .conteneur-menu{
     height: 1494px;
