--- a/css/p3.css
+++ b/css/p3.css
@@ -64,28 +64,28 @@ body{
 /*header*/
 .image_fond{
     object-fit: cover;
-    width: 372px;
+    width: 100%;
     height: 257px;
     position: absolute;
     z-index: -1;
 }
 .image_francaise{
     object-fit: cover;
-    width: 372px;
+    width: 100%;
     height: 257px;
     position: absolute;
     z-index: -1;
 }
 .image_note{
     object-fit: cover;
-    width: 372px;
+    width: 100%;
     height: 257px;
     position: absolute;
     z-index: -1;
 }
 .image_palette{
     object-fit: cover;
-    width: 372px;
+    width: 100%;
     height: 257px;
     position: absolute;
     z-index: -1;
@@ -574,6 +574,21 @@ header{
     transition: all 500ms;
     width: 59px;
 }
+ 
+.valide:hover .icone{
+    animation: icone-rotate 800ms ;
+}
+
+@keyframes icone-rotate {
+
+    0%{
+        transform: rotate(0deg);
+    }
+    
+    100%{
+        transform: rotate(360deg);
+    }
+}
 
 .icone{
     margin-top: 10px;
@@ -581,11 +596,11 @@ header{
     color: white;
 }
 
-
-.check1:hover{
+.check1:hover {
     transform: translateX(-4px);
     transition: all 500ms;
     width: 94px;
+
 }
 
 /*plats*/
