ajout de la class place ligne 795

--- a/css/p3.css
+++ b/css/p3.css
@@ -792,6 +792,9 @@ header{
     margin-right: 93px;
     margin-bottom: 5%;
 }
+.place{
+    left:-38%
+}
 .boutons{
     display: flex;
     justify-content: center;
