--- a/css/p3.css
+++ b/css/p3.css
@@ -540,6 +540,7 @@ header{
     margin: 12px 0px 2px 12px;
     overflow: hidden;
     text-overflow: ellipsis;
+    width: 80%;
 }
 .text-cartes{
     font-family: 'Roboto';
