ajout de cursor pointer ligne 531

--- a/css/p3.css
+++ b/css/p3.css
@@ -528,6 +528,7 @@ header{
     white-space: nowrap;
     width: 335px;
     margin-left: 20px;
+    cursor: pointer;
 }
 .text{
     white-space: nowrap;
