ajout de cursor pointer ligne 399, 405, 411 et 417

--- a/css/p3.css
+++ b/css/p3.css
@@ -396,21 +396,25 @@ a{
     color: white;
     font-family: 'Roboto';
     font-size: 16px;
+    cursor:pointer;
 }
 .partenaire{
     color: white;
     font-family: 'Roboto';
     font-size: 16px;
+    cursor: pointer;
 }
 .mention{
     color: white;
     font-family: 'Roboto';
     font-size: 16px;
+    cursor: pointer;
 }
 .contacter{
     color: white;
     font-family: 'Roboto';
     font-size: 16px;
+    cursor: pointer;
 }
 .fas{
     padding-right:12px ;
